# ChronosAI

./: .gitattributes  .gitignore  README.md  Server_Gemma4_v2.bat
dexter/: .gitignore  DESKTOP_APP_TOOLS.md  FIX_AND_EMBED_PLAN.md  IMPLEMENTATION_PLAN.md  LOTE1_SUMMARY.md  LOTE2_SUMMARY.md  LOTE3_SUMMARY.md  PLANO_CORRECAO_WHISPER_404.md  README.md  SESSAO_ASSISTENTE_VOZ_PTBR.md  WHISPER_STT_SETUP.md  download-bge-m3.ps1  index.html  package-lock.json  package.json  register-voice.ps1  setup-tts.ps1  start-all.ps1  teste.ps1  tts-test-body.json  validate.ps1
dexter/Documentação/: MIGRACAO_WINDOWS.md  PLANO_CORRECAO_WHISPER_404.md  SESSAO_ASSISTENTE_VOZ_PTBR.md  TTS_SETUP.md
dexter/chatterbox-tts-api/: .env.example  README-CHRONOS.md
dexter/chatterbox-tts-api/app/: config.py  main.py
dexter/chatterbox-tts-api/app/api/endpoints/: speech.py
dexter/chatterbox-tts-api/app/core/: tts_model.py
dexter/scripts/: open-windows-media-player.ps1
dexter/src/: App.css  App.tsx
dexter/src-tauri/: Cargo.toml  tauri.conf.json
dexter/src-tauri/.cargo/: config.toml
dexter/src-tauri/capabilities/: default.json
dexter/src-tauri/scripts/: media-player-library-shuffle.ps1
dexter/src-tauri/src/: context_modifier.rs  fast_path.rs  file_tools.rs  lib.rs  llm_ondemand.rs  media_controls.rs  notification_tools.rs  rag.rs  sandbox.rs  system_tools.rs  tools.rs  voice.rs
dexter/xtts-api-server/: README.md  main.py  requirements.txt
dexter/xtts-api-server/app/: config.py  main.py
dexter/xtts-api-server/app/api/endpoints/: health.py  speech.py  voices.py
dexter/xtts-api-server/app/core/: tts_model.py  voice_library.py
dexter/xtts-api-server/voices/: voices.json
