[package]
name = "voice-assistant"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "voice_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2.3.1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio-stream = "0.1"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-dialog = "2"

hound = "3.5"
cpal = "0.15"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
regex = "1"
urlencoding = "2"
tokio-util = { version = "0.7", features = ["rt"] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
futures = "0.3"
walkdir = "2"
evalexpr = "11"
similar = "2"
strsim = "0.11"
notify = "7"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Foundation",
    "Foundation_Collections",
    "Media_Control",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Input_KeyboardAndMouse",
] }
